@@ -28,6 +28,10 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       set to a specific class name, enabling logging only for that class.
       This simplies tracing around a specific problem now that the number
       of classes with debugging hooks is getting large (ADAMK)
+    - Moved the startup tool enabling of the syntax check and error list
+      from the startup timer to the constructor, and prevent them from
+      writing back to the config. We no longer need to write the config
+      at all during startup, making startup faster (ADAMK)
 
 0.64 2010.06.12
     - Last Stable before merge of new Task 2.0 API
